[gd_scene load_steps=4 format=3 uid="uid://d1a8fdyjhslet"]

[ext_resource type="Script" uid="uid://doabj5wbt72s1" path="res://scenes/setup_menu/setup_menu.gd" id="1_3dvfe"]
[ext_resource type="FontFile" uid="uid://cl116rahkaxh4" path="res://art/Xolonium-Regular.ttf" id="2_lelrv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjhrs"]
bg_color = Color(0, 0.239216, 0.305882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.751324, 0.838248, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3dvfe")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fjhrs")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_lelrv")
theme_override_font_sizes/font_size = 40
text = "Setup Game!"
horizontal_alignment = 1

[node name="AI" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AILabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AI"]
layout_mode = 2
text = "Turn on AI opponent:"

[node name="AICheckButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/AI"]
unique_name_in_owner = true
layout_mode = 2

[node name="ModeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AI"]
unique_name_in_owner = true
layout_mode = 2
text = "Turn on hard mode:"

[node name="ModeCheckButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/AI"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerLabel" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerOneLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerLabel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player One:"

[node name="PlayerTwoLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerLabel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player Two:"
horizontal_alignment = 2

[node name="PlayerName" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerOneName" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerName"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Player 1"

[node name="PlayerTwoName" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerName"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Player 2"

[node name="ToWinTotalLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "First to:"

[node name="ToWinTotal" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ToWinTotalSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ToWinTotal"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 1.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="ToWinTotalLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ToWinTotal"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_lelrv")
theme_override_font_sizes/font_size = 20
text = "Start Game"

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/AI/AICheckButton" to="." method="_on_ai_check_button_toggled"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/ToWinTotal/ToWinTotalSlider" to="." method="_on_to_win_total_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
